--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
         <p><a href="" >Shop online</a></p>
 
     </footer>
-    <script src="java.js"></script>
+    <script src="java1.js"></script>
 </body>
 </html>
